# dataengineering-zoomcamp-exercises

./: .gitignore  pyhash.py  pyproject.toml  script.py  setup.sh
week-1/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
week-1/src/: analytics.py  engine.py  ingestion.py
week-1/terraform-aws/: main.tf  variables.tf
week-10/: README.md
week-2/: README.md  etl_redshift_flow-deployment.yaml  etl_s3_flow-deployment.yaml  requirements.txt
week-2/blocks/: github_storage_block.py
week-2/flows/: etl_s3_to_redshift.py  etl_web_to_s3.py
week-2/infra/: variables.tf
week-3/: README.md
week-4/: README.md
week-5/: README.md
week-6/: README.md
week-7/: README.md
week-8/: README.md
week-9/: README.md
